# mid-brownie-testing

./: .gitignore  Cargo.toml  LICENSE  build.rs
.cargo/: config.toml
local/: Cargo.toml
local/src/: 2d.rs  3d.rs  raytrace.rs
src/: 2d.rs  3d.rs  lib.rs  main.rs
web/: Cargo.toml  README.md  rust-toolchain.toml
web/src/: lib.rs
web/www/: bootstrap.js  index.html  index.js  package.json  pnpm-lock.yaml  vite.config.ts
