[package]
name = "mid-brownie-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
highway.workspace = true

[workspace]
members = [".", "web", "local"]

[workspace.dependencies]
highway = "1.2.0"
plotters = "0.3.7"
plotters-canvas = "0.3.0"
rand = "0.8.5"
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.76", features = ["HtmlCanvasElement"] }
wee_alloc = "0.4.5"
