[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mid-brownie-testing = { path = ".." }

cgmath.workspace = true
plotters.workspace = true
plotters-canvas.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
wee_alloc.workspace = true
